AUTOMAKE_OPTIONS=foreign                                                                                                                                                        
lib_LTLIBRARIES= libwangkangluo1.la

libwangkangluo1_la_SOURCES = findStringsWithoutCase.c stringsReplace.c

wangkangluo1include_HEADERS = findStringsWithoutCase.h stringsReplace.h wangkangluo1.h

wangkangluo1includedir = ${includedir}/wangkangluo1/
